#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
#AC_INIT(FULL-PACKAGE-NAME, VERSION, BUG-REPORT-ADDRESS)
AC_INIT(ftmd, 0.1, fzqing@gmail.com)
AM_INIT_AUTOMAKE(ftmd, 0.1)
AC_CONFIG_SRCDIR([network/Mu_HttpParse.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lMuCrcMd5':
AC_CHECK_LIB([MuCrcMd5], [main])
# FIXME: Replace `main' with a function in `-lMuHttpPlus':
AC_CHECK_LIB([MuHttpPlus], [main])
# FIXME: Replace `main' with a function in `-lMuStruct':
AC_CHECK_LIB([MuStruct], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lssl':
AC_CHECK_LIB([ssl], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdlib.h string.h sys/socket.h sys/statfs.h sys/time.h sys/vfs.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_C_VOLATILE

#AC_PROG_RANLIB
AC_PROG_LIBTOOL
# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([bzero ftruncate gethostbyname gettimeofday inet_ntoa memset select socket strchr strncasecmp strrchr strstr])

AC_CONFIG_FILES([Makefile
		 main/Makefile
                 network/Makefile
                 parsexml/Makefile])
AC_OUTPUT
